--- a/quiz.css
+++ b/quiz.css
@@ -122,6 +122,9 @@ button:hover{
     align-items: center;
     justify-content: center;
 }
+audio{
+    display: none;
+}
 
 @media only screen and (max-width: 600px) {
     .heading h1{
